spring有一个StreamUtils，可以结合@ResponseBody思考一下。

--- a/2.MD
+++ b/2.MD
@@ -91,3 +91,5 @@ public class SpringTest {
 　　 }
 }
 不管是内置监听还是外部自定义监听一定要把实现ApplicationListener的类定义成一个bean才行，可以是通过注解@Component等也可以通过xml的方式去执行。
+
+spring有一个StreamUtils，可以结合@ResponseBody思考一下。
